Fixed: toggle collapsed menu background was not 100% width. Reduced size of menu items on toggler collapse. Centered cards on trips.html when viewed on landscape phones.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,22 +40,18 @@ nav {
     z-index: 2;
 }
 
-.navbar{
-    padding: 0px 50px 0px 50px; /*Overriding bootstrap default*/
-}
-
 nav ul {
     display: flex;
     flex-direction: column;
     list-style: none;
     width: 100%;
     background-color: #ebe9e9;
-    padding: 0;
+    padding: 0 10vw 2vw 10vw;
 }
 
 nav ul li {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 30px;         
@@ -86,6 +82,10 @@ nav ul li a {
     font-size: 7.5vh;
 }
 
+.navbar {
+    padding: 0;
+}
+
 .nav-container button:focus, .nav-container button:hover{
     outline: none;
     border: 1px solid rgba(95, 95, 95,0.5);
@@ -93,7 +93,7 @@ nav ul li a {
 
 .toggler-logo {
     height: 10vh;
-    padding: 3px;
+    padding: 3px 3px 3px 10px;
 }
 
 .logo {
@@ -212,7 +212,7 @@ nav ul li a {
 
 .card{
     border: 4px solid rgb(226, 226, 226);
-    width: 80vw;
+    width: 60vw;
     margin-left: auto;
     margin-right:auto;
 }
@@ -336,7 +336,7 @@ nav ul li a {
     width: 100%;
 }
 #gallery-title{
-    height: 12vh;
+    height: auto;
     width: 100%;
     text-align: center;
     background-color: #ebe9e9;
@@ -548,6 +548,10 @@ nav ul li a {
     position: static;
 }
 
+#background-ethiopia, #background-india, #background-mongolia, #background-mauritania{
+    height: 50vw;
+}
+
 
 }
 
@@ -666,6 +670,10 @@ nav ul li a {
     display: block; 
 }
 
+#gallery-title{
+    height: 12vh;
+}
+
 /*--------- 768px Footer ----------------*/
 
 .footer-logo{
@@ -708,12 +716,16 @@ nav ul li a {
     height: 20vh;
 }
 
+.navbar {
+    padding: 0px 25px 0px 25px;
+}
+
 nav ul {
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 1rem;
-    padding-left: 0px;
     background-color: transparent;
+    padding: 0;
 }
 
 nav ul li {
